--- a/DBlogs/templates/list.html
+++ b/DBlogs/templates/list.html
@@ -5,7 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>list</h1>
+    {% if tag %}
+        标签页：{{ tag.name }}
+    {% endif %}
+    {% if category %}
+        分类页：{{ category.name }}
+    {% endif %}
     <ul>
         {% for post in post_list %}
             <li>
