--- a/DBlogs/templates/list.html
+++ b/DBlogs/templates/list.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+    <div>顶部部分：
+        {% for cate in navs %}
+            <a href="/category/{{ cate.id }}/">{{ cate.name }}</a>
+        {% endfor %}
+    </div>
+    <hr/>
     {% if tag %}
         标签页：{{ tag.name }}
     {% endif %}
@@ -22,5 +28,17 @@
             </li>
         {% endfor %}
     </ul>
+    <hr/>
+    <div>底部部分：
+        {% for cate in categories %}
+            <a href="/category/{{ cate.id }}/">{{ cate.name }}</a>
+        {% endfor %}
+    </div>
+    <div>侧边栏展示：
+        {% for sidebar in sidebars %}
+            <h4>{{ sidebar.title }}</h4>
+            {{ sidebar.content }}
+        {% endfor %}
+    </div>
 </body>
 </html>
