--- a/DBlogs/templates/sidebar_comments.html
+++ b/DBlogs/templates/sidebar_comments.html
@@ -1,6 +1,6 @@
 <ul>
     {% for comment in comments %}
-        <li><a href="/post/{{ comment.target_id }}.html/">{{ comment.target.tilte }}</a>
+        <li><a href="/post/{{ comment.target_id }}.html">{{ comment.target.title }}</a>
         {{ comment.nickname }}:{{ comment.content }}
         </li>
     {% endfor %}
