--- a/DBlogs/templates/detall.html
+++ b/DBlogs/templates/detall.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>list</h1>
+{% extends 'base.html' %}
+
+{% block title %}{{ post.title }}{% endblock %}
+
+{% block main %}
     {% if post %}
         <h1>{{ post.title }}</h1>
         <div>
@@ -15,5 +12,4 @@
         <hr>
         <p>{{ post.content }}</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
