--- a/DBlogs/templates/list.html
+++ b/DBlogs/templates/list.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <div>顶部部分：
-        {% for cate in navs %}
-            <a href="/category/{{ cate.id }}/">{{ cate.name }}</a>
-        {% endfor %}
-    </div>
-    <hr/>
+{% extends 'base.html' %}
+{% block title %}
     {% if tag %}
         标签页：{{ tag.name }}
     {% endif %}
     {% if category %}
         分类页：{{ category.name }}
     {% endif %}
+{% endblock %}
+{% block main %}
     <ul>
         {% for post in post_list %}
             <li>
@@ -28,17 +19,4 @@
             </li>
         {% endfor %}
     </ul>
-    <hr/>
-    <div>底部部分：
-        {% for cate in categories %}
-            <a href="/category/{{ cate.id }}/">{{ cate.name }}</a>
-        {% endfor %}
-    </div>
-    <div>侧边栏展示：
-        {% for sidebar in sidebars %}
-            <h4>{{ sidebar.title }}</h4>
-            {{ sidebar.content_html }}
-        {% endfor %}
-    </div>
-</body>
-</html>
+{% endblock %}
