--- a/DBlogs/templates/base.html
+++ b/DBlogs/templates/base.html
@@ -7,7 +7,7 @@
 <body>
     <div>顶部部分：
         {% for cate in navs %}
-            <a href="/category/{{ cate.id }}/">{{ cate.name }}</a>
+            <a href="{% url 'category-list' cate.id %}">{{ cate.name }}</a>
         {% endfor %}
     </div>
     <hr/>
